# aiowdm

./: .gitignore  CMakeLists.txt  Readme.md
aiowdm/: CMakeLists.txt  aiowdm.c  aiowdm.cpp  aiowdm.h
include/: accesio_pci_ids.h  accesio_pci_ioctl.h  aiowdm.h
module/: .gitignore  CMakeLists.txt  Kbuild  Makefile  accesio_pci.c  accesio_pci_ids.h  accesio_pci_ioctl.h  aiowdm.c  devices.h
module_old/: .gitignore  CMakeLists.txt  aiowdm.c  aiowdm_ioctl.h
poc/: .gitignore  Makefile  pci-poc.c  poc-tester.c  poc-tester.mk
src/: aiowdm.c  aiowdm_ioctl.h
test/: CMakeLists.txt  RegisterIo.cpp  mmap-test.c  pcie-adio16-16fds-irq.cpp  query.cpp
